fix overflow rules for modals and card contents
Former-commit-id: 59a344dc897f80bd39eb4207b214d334d8c50d8c

--- a/workspace/src/app/wrappers/src/components/Card/card.scss
+++ b/workspace/src/app/wrappers/src/components/Card/card.scss
@@ -32,6 +32,7 @@ $ecc-size-card-spacing: $ecc-size-typo-base !default;
     padding: $ecc-size-card-spacing/2 $ecc-size-card-spacing $ecc-size-card-spacing $ecc-size-card-spacing;
     flex-grow: 1;
     flex-shrink: 1;
+    overflow: auto;
 
     .ecc-separation__divider-horizontal + & {
         padding-top: $ecc-size-card-spacing;
